# cmd-overwatch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  models.py  pyproject.toml  server.py  start.ps1
.claude/: launch.json
.github/workflows/: ci.yml  secret-scan.yml
docs/: architecture.md
hooks/: capture.py  install.ps1
overwatch/: __init__.py  config.py  redact.py  store.py
overwatch/aar/: __main__.py  generator.py
overwatch/collector/: __main__.py  git_hygiene.py  host_health.py  log_purge.py  log_scan.py  sched_tasks.py
overwatch/detect/: gate_classifier.py  rules.py
overwatch/notify/: __init__.py  discord.py  email.py
overwatch/solution/: drafter.py  executor.py  pipeline.py
scheduler/: Install-Schedule.ps1  Uninstall-Schedule.ps1  _common.ps1  run_aar.ps1  run_collector.ps1
static/: dashboard.js  index.html  style.css
tests/: test_aar.py  test_aar_main.py  test_api.py  test_collector_main.py  test_config.py  test_drafter.py  test_executor.py  test_gate_classifier.py  test_git_hygiene.py  test_host_health.py  test_log_purge.py  test_log_scan.py  test_notify.py  test_redact.py  test_sched_tasks.py  test_store.py
